--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body style="background-color:SeaGreen;>
+	<body>
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our site. Keep the change, you filthy animal.</a></div>
+				<div class="logo"><a href="#">Welcome to our fantastic site. Keep the change, you filthy animal.</a></div>
 			</header>
 
 		<!-- Main -->
