--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</header>
 
 		<!-- Main -->
-			<section  style="background-color:SeaGreen;id="main">
+			<section  style="background-color:SeaGreen;" id="main">
 				<div class="inner">
 					<section id="one" class="wrapper style1">
 						<div class="image fit flush">
